# scip_example

./: CMakeLists.txt  LICENSE
src/: CMakeLists.txt  main.cpp
src/FallingMass/: CMakeLists.txt  FallingMass.cpp  FallingMass.h  main.cpp
src/Spring/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt
src/common/include/scipcpp/: ForwardDeclarations.h  Info.h  Solution.h  Solver.h
src/common/src/: Info.cpp  Solution.cpp  Solver.cpp
